[Sync] Don't DCHECK on version for commit only types.

To save bandwidth for commit only types we strip off various peices of
metadata on commits. This includes versions. The previous contract was
that version should always increase by at least 1, which the server
respects as best it can, but to mechanisms that are tracking the
version before it is stripped, things seem weird.

The solution taken here was to remove the checking logic when we know
the verison is going to be meaningless.

Bug: 764103
Change-Id: Ia41a42ce0c17985a3dedad43e059e51313a1f316
Reviewed-on: https://chromium-review.googlesource.com/677624
Reviewed-by: Pavel Yatsuk <pavely@chromium.org>
Commit-Queue: Sky Malice <skym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503580}
Former-commit-id: 6bcdb9e719c60eae28a40d4a826a5d49a22916d3