components/sync/model_impl/processor_entity_tracker.h
@@ -95,7 +95,7 @@ class ProcessorEntityTracker {
   // unset IsUnsynced().  If many local changes occur in quick succession, it's
   // possible that the committed item was already out of date by the time it
   // reached the server.
-  void ReceiveCommitResponse(const CommitResponseData& data);
+  void ReceiveCommitResponse(const CommitResponseData& data, bool commit_only);
 
   // Clears any in-memory sync state associated with outstanding commits.
   void ClearTransientSyncState();
