components/sync/test/engine/mock_model_type_worker.h
@@ -96,6 +96,7 @@ class MockModelTypeWorker : public CommitQueue {
   // Pops one pending commit from the front of the queue and send a commit
   // response to the processor for it.
   void AckOnePendingCommit();
+  void AckOnePendingCommit(int64_t version_offset);
 
   // Set the encryption key to |ekn| and inform the processor with an update
   // containing the data in |update|, which defaults to an empty list.
@@ -113,7 +114,8 @@ class MockModelTypeWorker : public CommitQueue {
   // Returns a commit response that indicates a successful commit of the
   // given |request_data|. Updates server state accordingly.
   CommitResponseData SuccessfulCommitResponse(
-      const CommitRequestData& request_data);
+      const CommitRequestData& request_data,
+      int64_t version_offset);
 
   // Retrieve or set the server version.
   int64_t GetServerVersion(const std::string& tag_hash);
